--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,9 +2,80 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Login Form</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
+    <!-- Font Icon -->
+    <link rel="stylesheet" th:href="@{/fonts/material-icon/css/material-design-iconic-font.min.css}">
 </head>
 <body>
+
+<div class="main">
+
+  <!-- Sign in  Form -->
+  <section class="sign-in">
+    <div class="container">
+      <div class="signin-content">
+        <div class="signin-form">
+          <div class="message" th:if="${param.error}">
+            Invalid Username or Password
+          </div>
+          <div class="message" th:if="${param.logout}">
+            Logout Successful
+          </div>
+          <h2 class="form-title">Admin and User Login Page</h2>
+          <form method="post" th:action="@{/login}" class="register-form" id="login-form">
+
+            <div class="form-group">
+              <label for="username"><i class="zmdi zmdi-email material-icons-name"></i></label>
+              <input type="email" name="username" id="username" placeholder="Enter Your Email" required/>
+            </div>
+
+            <div class="form-group">
+              <label for="password"><i class="zmdi zmdi-lock"></i></label>
+              <input type="password" name="password" id="password" placeholder="Enter Your Password" required/>
+            </div>
+
+<!--            <div class="form-group">-->
+<!--              <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />-->
+<!--              <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember me</label>-->
+<!--            </div>-->
+
+            <div class="form-group form-button">
+              <input type="submit" name="signin" id="signin" class="form-submit" value="Log in" />
+            </div>
+
+          </form>
+          <br>
+          <br>
+
+          <div class="social-login">
+            <span class="social-label">Or login with</span>
+            <ul class="socials">
+              <li>
+<!--                <a href="/oauth2/authorization/facebook"><i class="zmdi zmdi-facebook"></i></a>-->
+              </li>
+              <li>
+                <a href="/oauth2/authorization/google"><i class="zmdi zmdi-google"></i></a>
+              </li>
+              <li>
+                <a href="/oauth2/authorization/github"><i class="zmdi zmdi-github"></i></a>
+              </li>
+            </ul>
+          </div>
+
+          <br>
+
+          <div class="form-group form-button">
+            <h6 class="signup-image-link">Don't have an account? <a href="http://localhost:8080/registration">register</a></h6>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </section>
+
+</div>
+
 
 </body>
 </html>
