--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,20 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Registration Form</title>
+    <title>Register</title>
     <link rel="stylesheet" th:href="@{../css/styles.css}">
     <!-- Font Icon -->
     <link rel="stylesheet" th:href="@{../fonts/material-icon/css/material-design-iconic-font.min.css}">
-
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const messageElement = document.querySelector(".message");
-            if (messageElement && messageElement.textContent.includes("successful")) {
-                document.getElementById("register-form").reset();
-            }
-        });
-    </script>
-
 
 </head>
 <body>
